fix(web): Fixed 100vh issue on mobile devices

--- a/packages/web/src/styles/variables.css
+++ b/packages/web/src/styles/variables.css
@@ -48,6 +48,8 @@
 
     --zindex-modal: 1000;
     --zindex-modal-active: 1001;
+
+    --vh: 100vh;
 }
 
 .dark {
